# airo

./: .flutter-plugins-dependencies  .gitignore  .snyk  .sonarcloud.properties  AGENTS.md  AIRO_BUILDING_BLOCKS_ROADMAP.md  ARCHITECTURE_DIAGRAMS.md  AUTHENTICATION_GUIDE.md  AUTH_DEBUGGING_GUIDE.md  BACKEND_AUTH_SETUP.md  CHANGELOG.md  CHESS_TESTING_GUIDE.md  CI_CD_COMPLETE.md  CODE_FIXES_SUMMARY.md  CODE_OF_CONDUCT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DELIVERY_SUMMARY.md  DEPLOYMENT_READY.md  DOCS_MIGRATION_COMPLETE.md  ENGINEERING_CHECKLIST.md  EPICS_APP1_APP2_APP3_IMPLEMENTATION.md  FILES_CREATED.md  FINAL_CHECKLIST.md  FINAL_DELIVERY_SUMMARY.md  FINAL_SUMMARY.md  GEMINI_NANO_QUICKSTART.md  GETTING_STARTED_CHECKLIST.md  GITHUB_PAGES_COMPLETE.md  GIT_PUSH_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TIMELINE.md  INDEX.md  KEYCLOAK_SETUP.md  LICENSE  Makefile  PRIVACY.md  QUICK_REFERENCE.md  (+37 more)
.augment/: rules.md
.codex/: config.toml
.github/: CODEOWNERS  FUNDING.yml  GITHUB_ACTIONS_SETUP.md  PULL_REQUEST_TEMPLATE.md  (+6 more)
iptv-data/: .gitignore  README.md  pyproject.toml  requirements.txt
iptv-data/config/: default.yaml  development.yaml
iptv-data/fixtures/iptv-org/: MANIFEST.md  index.m3u
iptv-data/fixtures/xmltv/: MANIFEST.md  generated-50mb.manifest.json
iptv-data/rules/: category_rules.json  flavor_rules.json  language_rules.json
iptv-data/src/: __init__.py  main.py  models.py
iptv-data/src/exporters/: __init__.py  json_exporter.py  m3u_exporter.py
iptv-data/src/loaders/: __init__.py  base_loader.py  iptv_org_loader.py  m3u_loader.py
iptv-data/src/processors/: __init__.py  deduplicator.py  enricher.py  normalizer.py  validator.py
iptv-data/src/utils/: __init__.py  config.py  logging.py
iptv-data/tests/: __init__.py  test_deduplicator.py  test_enricher.py  test_loaders.py  test_normalizer.py
iptv-data/tests/fixtures/: sample_channels.json  sample_m3u.m3u
rust/airo_core/: Cargo.toml
rust/airo_core/benches/: m3u_parser.rs
rust/airo_core/examples/: xmltv_ingest_benchmark.rs
rust/airo_core/src/: frb_generated.rs  lib.rs
rust/airo_core/src/api/: epg.rs  m3u.rs  mod.rs  text.rs  xmltv.rs
(+1688 files in other folders)
