[package]
name = "airo_core"
version = "0.1.0"
edition = "2021"
description = "Airo platform core — high-performance Rust engines for playlist, EPG, search and dedup"
license = "MIT"

[lib]
name = "airo_core"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
flutter_rust_bridge = "2"
memchr = "2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "m3u_parser"
harness = false
